[package]
name = "lugnut"
version = "0.0.5"
license = "MIT"
description = "An OTP Generator for Rust"
homepage = "https://github.com/JayHelton/lugnut"
documentation = "https://github.com/JayHelton/lugnut"
readme = "README.md"
authors = ["jayhelton <jaydhelton@gmail.com>", "kevinburchfield <kevinburchfi@gmail.com>"]
edition = "2018"
keywords = ["one-time passowrd", "otp", "hotp", "totp", "2fa"]

[dependencies]
rand = "0.8.3"
url = "2.2.1"
thiserror = "1.0"
hmac = "0.10.1"
sha-1 = "0.9"
sha2 = "0.9"
sha3 = "0.9"

[dependencies.crypto-mac]
version = "0.10"
features = ["std"]
