[package]
name = "lugnut"
version = "0.0.5"
license = "MIT"
description = "An OTP Generator for Rust"
homepage = "https://github.com/JayHelton/lugnut"
documentation = "https://github.com/JayHelton/lugnut"
readme = "README.md"
authors = ["jayhelton <jaydhelton@gmail.com>", "kevinburchfield <kevinburchfi@gmail.com>"]
edition = "2018"
keywords = ["one-time-password", "otp", "hotp", "totp", "webauthn", "2fa", "multifactor", "passwordless" ]

[features]
default = ["otp", "webauthn"]
otp = ['url', 'hmac', 'sha-1', 'sha2', 'sha3', 'crypto-mac']
webauthn = ['base64']

[dependencies]
rand = "0.8.3"
serde_json = "1.0"
thiserror = "1.0"
url = { version = "2.2.1", optional = true}
hmac = { version = "0.10.1", optional = true}
sha-1 = { version = "0.9", optional = true}
sha2 = { version = "0.9", optional = true}
sha3 = { version = "0.9", optional = true}
serde = { version = "1.0", features = ["derive"] }
base64 = { version = "0.13.0", optional = true}

[dependencies.crypto-mac]
version = "0.10"
optional = true
features = ["std"]
